demo/phonebook-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: 'phonebook'
  labels:
    name: 'phonebook'
