demo/Phonebook.Assets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebook-assets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phonebook-assets
  template:
    metadata:
      labels:
        app: phonebook-assets
    spec:
      nodeSelector:
        'beta.kubernetes.io/os': linux
      containers:
        - name: phonebook-assets
          image: tsystemsmms/phonebook-build:assets
          imagePullPolicy: 'Always'
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 128Mi
          #   limits:
          #     cpu: 250m
          #     memory: 256Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phonebook-assets-service
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: phonebook-assets
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phonebook-assets-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.pathmatcher: PathPrefix
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  rules:
    - http:
        paths:
          - path: /assets
            backend:
              serviceName: phonebook-assets-service
              servicePort: http
