demo/Phonebook.traefik-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
  - match: Host(`board.demo-phonebook.aquiver.de`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:                    
    - name: https-redirectscheme
